# L-EasyARG

./: LICENSE  MANIFEST.in  README.md  config.yaml  pyproject.toml  requirements.txt  setup.sh
L_EasyARG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
easy_arg/: analysis.py  cli.py  plotting.py  utils.py
